[package]
name = "egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"
thiserror = "1.0"
dirs = "6.0.0"
anyhow = "1.0.97"
shellexpand = "3.1"
[profile.release]
opt-level = 'z'  
lto = true      
codegen-units = 1 
panic = 'abort' 
strip = true
